--- a/src/pages/background/article/style/ArticleModal.less
+++ b/src/pages/background/article/style/ArticleModal.less
@@ -1,7 +1,21 @@
-.add-article {
-  .line-hr {
-    height: 1px;
-    border: none;
-    background-color: #E8E8E8 ;
+.article-modal {
+  position: relative;
+  .ant-radio-group {
+    width: 100%;
+  }
+  .ant-col-4 {
+    margin-right: 10px;
+  }
+  .ant-checkbox-group {
+    line-height: unset;
+  }
+  .ant-col-sm-21 {
+    width: 89%;
+  }
+  .edit {
+    position: relative;
+    color: rgb(87, 163, 243);
+    top: 80px;
+    left: 30px;
   }
 }
