--- a/src/pages/background/article/style/ArticleModal.less
+++ b/src/pages/background/article/style/ArticleModal.less
@@ -20,4 +20,11 @@
     cursor: pointer;
     z-index: 111;
   }
+  .content {
+    width: 776px;
+    min-height: 95px;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    padding: 8px 10px;
+  }
 }
