markdown code 序号样式修改

--- a/src/components/markdown/editor/index.less
+++ b/src/components/markdown/editor/index.less
@@ -265,7 +265,7 @@
   }
 
   pre {
-    padding: .6em;
+    // padding: .6em;
     overflow: auto;
     line-height: 1.6;
     background-color: #f0f0f0;
@@ -295,8 +295,8 @@
 
   table {
     width: 100%;
-    border: 1px solid #ddd;
-    margin-bottom: .6em;
+    // border: 1px solid #ddd;
+    // margin-bottom: .6em;
     border-collapse: collapse;
     text-align: left;
     th, td {
