解决添加文章js报错问题

--- a/src/pages/background/article/style/OriginalArticle.less
+++ b/src/pages/background/article/style/OriginalArticle.less
@@ -7,4 +7,16 @@
   .ant-form-item {
     margin-bottom: 5px;
   }
+  .serch-area {
+    .query-time {
+      .ant-input {
+        border-radius: 4px 0px 0px 4px;
+      }
+    }
+    .query-time-type {
+      .ant-select-selection {
+        border-radius: 0px 4px 4px 0px;
+      }
+    }
+  }
 }
