--- a/src/pages/background/article/style/ArticleModal.less
+++ b/src/pages/background/article/style/ArticleModal.less
@@ -23,8 +23,14 @@
   .content {
     width: 776px;
     min-height: 95px;
-    border: 1px solid #d9d9d9;
+    border: 1px solid #f5222d;
     border-radius: 4px;
     padding: 8px 10px;
+  }
+  .content-message {
+    bottom: -21px;
+    position: absolute;
+    left: 70px;
+    color: #f5222d;
   }
 }
