--- a/src/pages/background/article/style/ArticleModal.less
+++ b/src/pages/background/article/style/ArticleModal.less
@@ -1,36 +1,27 @@
-.article-modal {
-  position: relative;
-  .ant-radio-group {
-    width: 100%;
+.preview-modal {
+  .title {
+    font-size: 26px;
+    text-align: center;
+    margin: 10px;
   }
-  .ant-col-4 {
-    margin-right: 10px;
-  }
-  .ant-checkbox-group {
-    line-height: unset;
-  }
-  .ant-col-sm-21 {
-    width: 89%;
-  }
-  .edit {
-    position: relative;
-    color: rgb(87, 163, 243);
-    top: 80px;
-    left: 30px;
-    cursor: pointer;
-    z-index: 111;
-  }
-  .content {
-    width: 776px;
-    min-height: 95px;
-    border: 1px solid #f5222d;
-    border-radius: 4px;
-    padding: 8px 10px;
-  }
-  .content-message {
-    bottom: -21px;
-    position: absolute;
-    left: 70px;
-    color: #f5222d;
+  .meta-info {
+    width: 500px;
+    height: 25px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 20px;
+    ul {
+      margin: 0 auto;
+      display: inline-block;
+      padding-inline-start: 0px;
+      li {
+        float: left;
+        text-decoration: none;
+        list-style: none;
+        margin-left: 5px;
+        margin-right: 5px;
+        font-size: 14px;
+      }
+    }
   }
 }
