--- a/src/pages/background/user/style/UserManage.less
+++ b/src/pages/background/user/style/UserManage.less
@@ -1,3 +1,42 @@
 .container {
-  
+  .ant-tabs-top .ant-tabs-ink-bar-animated {
+    top: 0px;
+  }
+  .ant-tabs-nav {
+    width: 100%;
+    .ant-tabs-tab-active {
+      width: 50%;
+    }
+    .ant-tabs-tab:last-child {
+      width: 50%;
+    }
+    .ant-tabs-tab {
+      width: 50%;
+      text-align: center;
+      margin: 0px;
+      border: 1px solid #e8e8e8;
+      border-bottom: 2px solid #e8e8e8;
+      &:last-child{
+        border-left: none;
+      }
+      &.ant-tabs-tab-active{
+        border-bottom: none;
+      }
+    }
+  }
+  .abs-tab-prev-icon, .ant-tabs-tab-next-icon {
+    display: none;
+  }
+  .ant-tabs-tab-prev.ant-tabs-tab-arrow-show, .ant-tabs-tab-next.ant-tabs-tab-arrow-show {
+    width: 0px;
+  }
+  .ant-tabs-tab-prev-icon, .ant-tabs-tab-next-icon {
+    display: none;
+  }
+  .ant-tabs-nav-container-scrolling {
+    padding: 0px;
+  }
+  .ant-tabs-bar {
+    border-bottom: none;
+  }
 }
