开源项目页面开发

--- a/src/pages/background/article/style/OpenSourceProject.less
+++ b/src/pages/background/article/style/OpenSourceProject.less
@@ -1,42 +1,23 @@
 .container {
-  .ant-tabs-top .ant-tabs-ink-bar-animated {
-    top: 0px;
+  .line-hr {
+    height: 1px;
+    border: none;
+    background-color: #E8E8E8 ;
   }
-  .ant-tabs-nav {
-    width: 100%;
-    .ant-tabs-tab-active {
-      width: 50%;
-    }
-    .ant-tabs-tab:last-child {
-      width: 50%;
-    }
-    .ant-tabs-tab {
-      width: 50%;
-      text-align: center;
-      margin: 0px;
-      border: 1px solid #e8e8e8;
-      border-bottom: 2px solid #e8e8e8;
-      &:last-child{
-        border-left: none;
-      }
-      &.ant-tabs-tab-active{
-        border-bottom: none;
+  .ant-form-item {
+    margin-bottom: 5px;
+  }
+  .serch-area {
+    .query-time {
+      .ant-input {
+        border-radius: 4px 0px 0px 4px;
       }
     }
-  }
-  .abs-tab-prev-icon, .ant-tabs-tab-next-icon {
-    display: none;
-  }
-  .ant-tabs-tab-prev.ant-tabs-tab-arrow-show, .ant-tabs-tab-next.ant-tabs-tab-arrow-show {
-    width: 0px;
-  }
-  .ant-tabs-tab-prev-icon, .ant-tabs-tab-next-icon {
-    display: none;
-  }
-  .ant-tabs-nav-container-scrolling {
-    padding: 0px;
-  }
-  .ant-tabs-bar {
-    border-bottom: none;
+    .query-time-type {
+      .ant-select-selection {
+        border-radius: 0px 4px 4px 0px;
+      }
+    }
   }
 }
+
