开源项目页面开发

--- a/src/pages/background/article/style/OpenSourceProject.less
+++ b/src/pages/background/article/style/OpenSourceProject.less
@@ -19,5 +19,17 @@
       }
     }
   }
+
+  .ant-list-split .ant-list-header {
+    width: 96%;
+  }
+
+  .ant-list * {
+    width: 98.6%;
+  }
+
+  ul {
+    list-style-type: circle;
+  }
 }
 
