开源项目日志列表开发

--- a/src/pages/background/article/style/OpenSourceProject.less
+++ b/src/pages/background/article/style/OpenSourceProject.less
@@ -22,6 +22,7 @@
 
   .ant-list-split .ant-list-header {
     width: 96%;
+    height: 60px;
   }
 
   .ant-list * {
@@ -30,6 +31,14 @@
 
   ul {
     list-style-type: circle;
+  }
+
+  .add-log {
+    position: relative;
+    top: -20px;
+    width: 17px;
+    left: 70px;
+    cursor: pointer;
   }
 }
 
