开源项目页面日志弹窗开发

--- a/src/pages/background/article/style/OpenSourceProject.less
+++ b/src/pages/background/article/style/OpenSourceProject.less
@@ -19,5 +19,38 @@
       }
     }
   }
+
+  .ant-list-split .ant-list-header {
+    width: 96%;
+    height: 60px;
+  }
+
+  .ant-list-item {
+    width: 96.4%;
+  }
+
+  ul {
+    list-style-type: circle;
+  }
+
+  .add-log {
+    position: relative;
+    top: -20px;
+    width: 17px;
+    left: 70px;
+    cursor: pointer;
+  }
+  .pagination {
+    position: absolute;
+    width: 200px;
+    right: 10px;
+    top: 11px;
+  }
+  .title .title-icon {
+    display: none;
+  }
+  .title:hover .title-icon {
+    display: inline-block;
+  }
 }
 
