转载文章编辑、预览弹窗修改

--- a/src/pages/background/article/style/TransshipmentModal.less
+++ b/src/pages/background/article/style/TransshipmentModal.less
@@ -1,4 +1,4 @@
-.article-modal {
+.Transshipment-modal {
   position: relative;
   .ant-radio-group {
     width: 100%;
@@ -16,7 +16,7 @@
     position: relative;
     color: rgb(87, 163, 243);
     top: 80px;
-    left: 30px;
+    left: 38px;
     cursor: pointer;
     z-index: 111;
   }
