导航列表table拖动样式修改

--- a/src/pages/background/system/style/NavigationList.less
+++ b/src/pages/background/system/style/NavigationList.less
@@ -1,29 +1,9 @@
-
 .container {
-  .form-item {
-     margin-bottom: 20px;
+  tr.drop-over-downward td {
+    border-bottom: 2px dashed #1890ff;
   }
-}
-.userModalSty {
-  .ant-modal-body {
-    padding: 16px 0;
+  
+  tr.drop-over-upward td {
+    border-top: 2px dashed #1890ff;
   }
-}
-.ant-modal-footer button + button {
-  margin-left: 8px;
-  margin-bottom: 0;
-  margin-right: 16px;
-}
-.ant-col-sm-12 {
-  display: block;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 70%;
-}
-.ant-col-1 {
-  display: block;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  /* width: 4.16666667%; */
-  left: -15px;
 }
