修复打包后图标字体无法显示问题

--- a/src/components/shared/Pagination/index.less
+++ b/src/components/shared/Pagination/index.less
@@ -2,6 +2,7 @@
 @import '~styles/mixins/index.less';
 
 .pagination-container {
+  .clearfix();
   .ant-pagination {
     float: right;
     margin: 16px 0;
