--- a/src/pages/background/article/style/OpenSourceProject.less
+++ b/src/pages/background/article/style/OpenSourceProject.less
@@ -52,5 +52,12 @@
   .title:hover .title-icon {
     display: inline-block;
   }
+  .popover {
+    cursor: pointer;
+  }
 }
+.osp-popover {
+    max-width: 400px;
+    word-break: break-word;
+  }
 
