个人简介页面联调

--- a/src/pages/background/article/style/OpenSourceProject.less
+++ b/src/pages/background/article/style/OpenSourceProject.less
@@ -49,7 +49,7 @@
   .title .title-icon {
     display: none;
   }
-  .title:hover .title-icon {
+  .list-item:hover .title .title-icon {
     display: inline-block;
   }
   .popover {
