导航菜单页面联调

--- a/src/pages/background/system/style/NavigationList.less
+++ b/src/pages/background/system/style/NavigationList.less
@@ -8,4 +8,23 @@
   .anticon svg {
     cursor: default;
   }
+
+  .ant-alert-with-description {
+    padding: 5px 5px 5px 64px;
+    margin-bottom: 24px;
+    .ant-alert-icon {
+      top: 9px;
+      font-size: 18px;
+    }
+    .ant-alert-close-icon {
+      top: 7px;
+    }
+    .ant-alert-message {
+      margin-bottom: 2px;
+    }
+    .ant-alert-description {
+      position: relative;
+      left: -10px;
+    }
+  }
 }
