--- a/src/pages/background/user/tabRole/Index.less
+++ b/src/pages/background/user/tabRole/Index.less
@@ -1,5 +1,8 @@
 
 .container {
+  .ant-table-tbody > tr:hover > td {
+    background: transparent ! important;
+}
   
 }
 .user-table-role-bind-modal {
