添加原创文章 message淡入淡出

--- a/src/containers/style/UserLayout.less
+++ b/src/containers/style/UserLayout.less
@@ -49,6 +49,7 @@
     height: 35px;
     background: #efefef;
     float: right;
+    cursor: pointer;
     & > img {
       width: 100%;
       height:100%;
