--- a/src/pages/article/style/PreviewModal.less
+++ b/src/pages/article/style/PreviewModal.less
@@ -1,27 +1,19 @@
 .preview-modal {
   .title {
     font-size: 26px;
-    text-align: center;
-    margin: 10px;
+    text-align: left;
+    margin: 10px 0px;
+    color:rgb(0, 0, 0);
   }
   .meta-info {
     width: 500px;
     height: 25px;
-    margin: 0 auto;
-    text-align: center;
     margin-bottom: 20px;
-    ul {
-      margin: 0 auto;
-      display: inline-block;
-      padding-inline-start: 0px;
-      li {
-        float: left;
-        text-decoration: none;
-        list-style: none;
-        margin-left: 5px;
-        margin-right: 5px;
-        font-size: 14px;
-      }
+    color: rgba(0, 0, 0, 0.45);
+    .block {
+      margin-right: 10px;
+      display: block;
+      float: left;
     }
   }
 }
