--- a/src/pages/article/style/TransshipmentModal.less
+++ b/src/pages/article/style/TransshipmentModal.less
@@ -32,6 +32,19 @@
     position: absolute;
     left: 70px;
     color: #f5222d;
+    display: none;
+    opacity: 0;
+  }
+  .meta-info {
+    width: 500px;
+    height: 25px;
+    margin-bottom: 20px;
+    color: rgba(0, 0, 0, 0.45);
+    .block {
+      margin-right: 10px;
+      display: block;
+      float: left;
+    }
   }
 }
 
